<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的安卓</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">跟随手指滑动的小球</string>
    <string name="button2">开关</string>
    <string name="button3">lists</string>
    <string name="button4">自定义Toast</string>
    <string name="button5">Dialog集合</string>
    <string name="toast_btn1">默认</string>
    <string name="toast_btn2">自定义显示位置</string>
    <string name="toast_btn3">带图片</string>
    <string name="toast_btn4">完全自定义</string>
    <string name="toast_btn5">其他线程</string>
</resources>
