<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt1_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_btn1" />

    <Button
        android:id="@+id/bt2_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_btn2" />

    <Button
        android:id="@+id/bt3_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_btn3" />

    <Button
        android:id="@+id/bt4_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_btn4" />

    <Button
        android:id="@+id/bt5_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_btn5" />

</LinearLayout>